--- a/src/style.css
+++ b/src/style.css
@@ -18,10 +18,35 @@ canvas {
   width: 100%;
   height: 100%;
   display: block;
+  user-select: none;
 }
 
 canvas:focus {
   outline: none;
+}
+
+.joystick {
+  position: absolute;
+  bottom: 1rem;
+  left: 1rem;
+  width: 8rem;
+  height: 8rem;
+  background-color: rgba(20, 20, 20, 0.5);
+  border: 0.2rem solid rgba(20, 20, 20, 0.1);
+  backdrop-filter: blur(0.5rem) contrast(30%);
+  border-radius: 5rem;
+  user-select: none;
+}
+
+.joystick .handle {
+  width: 2rem;
+  height: 2rem;
+  background-color: rgba(20, 20, 20, 0.5);
+  border: 0.2rem solid rgba(20, 20, 20, 0.1);
+  box-shadow: 0 0 0.25rem 0.25rem rgba(20, 20, 20, 0.25);
+  border-radius: 2rem;
+  cursor: pointer;
+  user-select: none;
 }
 
 div.inspector {
