--- a/src/style.css
+++ b/src/style.css
@@ -142,6 +142,21 @@ div.inspector {
   margin: 0;
 }
 
+.inspector .general button {
+  cursor: pointer;
+  display: block;
+  margin: 0.5rem auto 1.5rem;
+  font-family: 'Argon', system-ui;
+  background: #1E3F88;
+  border: 0.2rem solid #1E3F88;
+  box-shadow: 0.2rem 0.2rem 0.4rem rgba(0, 0, 0, 0.4);
+  color: #ffffff;
+  font-size: 1.5rem;
+  padding: 0.5rem 1rem;
+  transition: background-color 180ms;
+  font-weight: 600;
+}
+
 .inspector .description {
   padding: 0.5rem 1rem;
   text-indent: 2rem;
@@ -208,4 +223,53 @@ div.inspector {
   text-align: center;
   margin: 0;
   width: 100%;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 50;
+}
+
+.modal .backdrop {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.modal .content {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: rgba(20, 20, 20, 0.5);
+  backdrop-filter: blur(0.5rem) contrast(30%);
+  padding: 2rem;
+  position: absolute;
+}
+
+.modal .content div {
+  color: #ffffff;
+  text-indent: 2rem;
+  font-weight: 400;
+  max-width: 40rem;
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.modal .content a {
+  text-decoration: none;
+  display: block;
+  font-family: 'Argon', system-ui;
+  background: #1E3F88;
+  border: 0.2rem solid #1E3F88;
+  box-shadow: 0.2rem 0.2rem 0.4rem rgba(0, 0, 0, 0.4);
+  color: #ffffff;
+  font-size: 1.5rem;
+  padding: 0.5rem 1rem;
+  transition: background-color 180ms;
+  font-weight: 600;
+  margin: 2rem 0 0;
+  text-align: center;
 }
